Improve droplet release and HTTPS automation